fix: card image overlay gap

--- a/src/app/components/movies-list/movies-list.component.scss
+++ b/src/app/components/movies-list/movies-list.component.scss
@@ -49,7 +49,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    gap: 1rem;
+    gap: 0.5rem;
   }
 }
 
