--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,7 +55,7 @@ h1, h2, h4, h5 {
 }
 
 h1, h2, h4, h5, p {
-  margin-bottom: 0rem;
+  margin-bottom: 0rem !important;
 }
 
 h3 {
